Added skills for spring enterprise patterns and spring-data jpa